--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,72 +24,71 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.6.4",
-    "jquery": "^3.4.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "core-js": "^3.8.2",
+    "jquery": "^3.5.1",
     "merge": "^1.2.1",
-    "npm-check-updates": "^4.1.1",
     "promise": "^8.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.1.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.8.1",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.4",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
     "@babel/preset-stage-2": "7.8.3",
-    "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
-    "ajv": "6.12.0",
-    "app-manifest-webpack-plugin": "1.2.0",
+    "@svgr/webpack": "5.5.0",
+    "@typescript-eslint/eslint-plugin": "4.12.0",
+    "@typescript-eslint/parser": "4.12.0",
+    "ajv": "7.0.3",
+    "app-manifest-webpack-plugin": "1.2.2",
     "babel-eslint": "10.1.0",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.1.0",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.2",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clean-webpack-plugin": "3.0.0",
-    "cross-env": "7.0.2",
-    "css-loader": "3.4.2",
-    "eslint": "6.6.0",
-    "eslint-config-react-app": "5.2.1",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "1.6.1",
-    "file-loader": "6.0.0",
-    "html-loader": "1.0.0",
-    "html-webpack-plugin": "4.0.3",
-    "jest": "24.9.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
+    "cross-env": "7.0.3",
+    "css-loader": "3.6.0",
+    "eslint": "7.17.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "6.2.0",
+    "html-loader": "1.3.2",
+    "html-webpack-plugin": "4.5.1",
+    "jest": "26.6.3",
+    "mini-css-extract-plugin": "0.12.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "4.1.0",
+    "postcss-normalize": "9.0.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.2",
-    "react-dev-utils": "10.2.1",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "1.1.3",
-    "terser-webpack-plugin": "2.3.5",
-    "typescript": "3.8.3",
-    "url-loader": "4.0.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "4.2.2",
-    "workbox-webpack-plugin": "5.1.2"
+    "postcss-safe-parser": "5.0.2",
+    "react-dev-utils": "11.0.1",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "10.1.0",
+    "source-map-loader": "2.0.0",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "2.3.8",
+    "typescript": "4.1.3",
+    "url-loader": "4.1.1",
+    "webpack": "5.11.1",
+    "webpack-cli": "4.3.1",
+    "webpack-manifest-plugin": "3.0.0",
+    "webpack-merge": "5.7.3",
+    "workbox-webpack-plugin": "6.0.2"
   },
   "eslintConfig": {
     "extends": "react-app"
