--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,71 +24,71 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "core-js": "^3.8.2",
-    "jquery": "^3.5.1",
-    "merge": "^1.2.1",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
+    "core-js": "^3.18.0",
+    "jquery": "^3.6.0",
+    "merge": "^2.1.1",
     "promise": "^8.1.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.8.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^3.4.1",
+    "reactstrap": "^8.10.0",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@babel/preset-stage-2": "7.8.3",
-    "@svgr/webpack": "5.5.0",
-    "@typescript-eslint/eslint-plugin": "4.12.0",
-    "@typescript-eslint/parser": "4.12.0",
-    "ajv": "7.0.3",
-    "app-manifest-webpack-plugin": "1.2.2",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.2.2",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "clean-webpack-plugin": "3.0.0",
-    "cross-env": "7.0.3",
-    "css-loader": "3.6.0",
-    "eslint": "7.17.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "5.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "file-loader": "6.2.0",
-    "html-loader": "1.3.2",
-    "html-webpack-plugin": "4.5.1",
-    "jest": "26.6.3",
-    "mini-css-extract-plugin": "0.12.0",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "4.1.0",
-    "postcss-normalize": "9.0.0",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "5.0.2",
-    "react-dev-utils": "11.0.1",
-    "resolve-url-loader": "3.1.2",
-    "sass-loader": "10.1.0",
-    "source-map-loader": "2.0.0",
-    "style-loader": "1.3.0",
-    "terser-webpack-plugin": "2.3.8",
-    "typescript": "4.1.3",
-    "url-loader": "4.1.1",
-    "webpack": "5.11.1",
-    "webpack-cli": "4.3.1",
-    "webpack-manifest-plugin": "3.0.0",
-    "webpack-merge": "5.7.3",
-    "workbox-webpack-plugin": "6.0.2"
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-stage-2": "^7.8.3",
+    "@svgr/webpack": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "ajv": "^7.2.4",
+    "app-manifest-webpack-plugin": "^1.2.2",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^0.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^4.1.0",
+    "postcss-normalize": "^9.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^5.0.2",
+    "react-dev-utils": "^11.0.4",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^10.1.0",
+    "source-map-loader": "^2.0.0",
+    "style-loader": "^1.3.0",
+    "terser-webpack-plugin": "^2.3.8",
+    "typescript": "^4.4.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-manifest-plugin": "^3.2.0",
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.3.0"
   },
   "eslintConfig": {
     "extends": "react-app"
